k8s/base/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-boilerplate
  namespace: dev
spec:
  selector:
    matchLabels:
      app: backend-boilerplate
  replicas: 2
  minReadySeconds: 30
  template:
    metadata:
      labels:
        app: backend-boilerplate
    spec:
      containers:
      - name: backend-boilerplate
        image: lfnugraha/backend-boilerplate
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
