k8s/base/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-boilerplate-svc
  namespace: dev
spec:
  selector:
    app: backend-boilerplate
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
