k8s/base/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-boilerplate-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: lfnugraha.lfn
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-boilerplate-svc
            port:
              name: http
